add - nyc mocha sinon add - account tests add - redis cache add - module errorHandler
